namespace RPGManager.Desktop.Domain.Entities.RaceEntities;

public class RaceLanguage
{
    public Guid RaceId { get; set; }

    public Guid LanguageId { get; set; }
}