namespace RPGManager.Desktop.Domain.Models.Races;

public class RaceWeaponProficiencyModel
{
    public Guid RaceId { get; set; }
    public Guid WeaponId { get; set; }
}