@startuml Race_Diagram.puml
entity Race {
    Id: Guid <<PK>>
    GameSystemId: Guid <<FK>>
    ParentRaceId: Guid null <<FK>>
    Name: varchar 150
    Description: varchar 150
    Speed: float
    IsPlayable: bit
}

entity RaceLanguage {
    RaceId: Guid <<PK>>
    LanguageId: Guid <<PK>>
}

entity RaceAbilityScore {
    Id: Guid <<PK>>
    RaceId: Guid <<FK>>
    AbilityScoreId: Guid <<FK>> null
    AbilityScoreIncrease: int
}

entity RaceFeature {
    Id: Guid <<PK>>
    RaceId: Guid <<FK>>
    Name: varchar 30
    Description: text
}

entity RaceSkillProficiency {
    RaceId: Guid <<PK>> <<FK>>
    SkillId: Guid <<PK>> <<FK>>
    IsExpertise: bit
}

entity RaceWeaponProficiency {
    RaceId: Guid <<PK>> <<FK>>
    WeaponId: Guid <<PK>> <<FK>>
}

entity RaceWeaponGroupProficiency {
    RaceId: Guid <<PK>> <<FK>>
    WeaponGroupId: Guid <<PK>> <<FK>>
}

entity RaceToolProficiency {
    RaceId: Guid <<PK>> <<FK>>
    ToolId: Guid <<PK>> <<FK>>
}

'entity RaceTrick {
'    RaceId: Guid <<PK>> <<FK>>
'    TrickId: Guid <<PK>> <<FK>>
'}

'entity RaceSpell {
'    RaceId: Guid <<PK>> <<FK>>
'    SpellId: Guid <<PK>> <<FK>>
'}

GameSystem "1" ||--o{ "0..N" Race

Race "1" ||--o{ "0..N" Race : ParentRaceId

Race "1" ||--o{ "0..N" RaceLanguage
Language "1" ||--o{ "0..N" RaceLanguage

Race "1" ||--o{ "0..N" RaceAbilityScore
AbilityScore "0..1" ||--o{ "0..N" RaceAbilityScore

Race "1" ||--o{ "0..N" RaceFeature

'Race -- RaceWeaponSkill
'WeaponSkill -- RaceWeaponSkill

'Race -- RaceSkill
'Skill -- RaceSkill

'Race -- RaceToolSkill
'ToolSkill -- RaceToolSkill

'Race -- RaceTrick
'Trick -- RaceTrick

'Race -- RaceSpell
'Spell -- RaceSpell
@enduml
